--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -564,18 +564,6 @@ video {
   position: sticky;
 }
 
-.bottom-\[4vh\] {
-  bottom: 4vh;
-}
-
-.right-\[4vh\] {
-  right: 4vh;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -588,16 +576,12 @@ video {
   right: 0px;
 }
 
-.right-10 {
-  right: 2.5rem;
+.bottom-\[4vh\] {
+  bottom: 4vh;
 }
 
-.-right-10 {
-  right: -2.5rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
+.right-\[4vh\] {
+  right: 4vh;
 }
 
 .bottom-2 {
@@ -608,12 +592,8 @@ video {
   right: 0.5rem;
 }
 
-.right-8 {
-  right: 2rem;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
 .bottom-4 {
@@ -628,84 +608,93 @@ video {
   z-index: 10;
 }
 
-.m-0 {
-  margin: 0px;
+.m-\[1vh\] {
+  margin: 1vh;
 }
 
-.mr-8 {
-  margin-right: 2rem;
+.ml-1\.5 {
+  margin-left: 0.375rem;
 }
 
-.ml-8 {
-  margin-left: 2rem;
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .ml-6 {
   margin-left: 1.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
 
-.inline-block {
-  display: inline-block;
+.inline {
+  display: inline;
 }
 
 .hidden {
   display: none;
 }
 
+.h-\[8vh\] {
+  height: 8vh;
+}
+
+.h-\[6vh\] {
+  height: 6vh;
+}
+
 .h-\[3vh\] {
   height: 3vh;
 }
 
-.h-\[10vh\] {
-  height: 10vh;
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[3rem\] {
+  height: 3rem;
 }
 
 .h-10 {
   height: 2.5rem;
 }
 
-.h-\[5rem\] {
-  height: 5rem;
-}
-
-.w-\[5rem\] {
-  width: 5rem;
-}
-
 .w-\[100vw\] {
   width: 100vw;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[12rem\] {
+  width: 12rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
 .border-0 {
   border-width: 0px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -713,22 +702,28 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.bg-imgbglight {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 164 96 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.p-3 {
-  padding: 0.75rem;
+.bg-rose-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 63 94 / var(--tw-bg-opacity));
+}
+
+.bg-thormsgbg {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 252 244 / var(--tw-bg-opacity));
 }
 
 .p-\[3vh\] {
   padding: 3vh;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-2xl {
@@ -736,9 +731,9 @@ video {
   line-height: 2rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-gray-50 {
@@ -754,29 +749,59 @@ video {
   transition-duration: 150ms;
 }
 
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-rose-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(225 29 72 / var(--tw-bg-opacity));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-gray-700 {
     --tw-bg-opacity: 1;
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
 
-  .dark\:text-gray-100 {
+  .dark\:bg-gray-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-thormsgbgdrk {
+    --tw-bg-opacity: 1;
+    background-color: rgb(82 60 0 / var(--tw-bg-opacity));
+  }
+
+  .dark\:text-white {
     --tw-text-opacity: 1;
-    color: rgb(243 244 246 / var(--tw-text-opacity));
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
   .dark\:text-gray-50 {
     --tw-text-opacity: 1;
     color: rgb(249 250 251 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-gray-400:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity));
   }
 }
