--- a/views/fullchat.ejs
+++ b/views/fullchat.ejs
@@ -105,7 +105,7 @@
       <form action="chat-message" method="POST" class="fixed bottom-0" id="post-chat-msg">
          <input style="display: none;" class="chat-posted-time" type="date" name="time"><br>
          <input class="bg-gray-100 w-[100vw] p-[3vh] border-0 box-border text-2xl rounded-t-2xl focus:outline-none dark:text-gray-50 dark:bg-gray-800" id="newMessageTextbox" type="text" name="message" placeholder="Message..." required><br>
-         <button class="absolute bottom-4 right-6 h-10" type="submit"><span class="material-symbols-rounded text-gray-50" style="font-size: 2.5rem">send</span></button>
+         <button class="absolute bottom-4 right-6 h-10" type="submit"><span class="material-symbols-rounded text-gray-800 dark:text-gray-50" style="font-size: 2.5rem">send</span></button>
       </form>
    </div>
 
