--- a/views/videoroom.ejs
+++ b/views/videoroom.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Chat</title>
-    <link rel="stylesheet" href="/Video Chat/video.css" />
+    <link rel="stylesheet" href="/styles/videochat.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
@@ -60,7 +60,7 @@
         </div>
       </div>
     </div>
-  </div>
+   </div>
   </body>
-  <script src="/Video Chat/video.js"></script>
+  <script src="/scripts/videochat.js"></script>
 </html>
