--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <!-- <link rel="stylesheet" href="styles/tailwind.css"> -->
-   <title>Chat Playground Test Thing</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/brands.min.css">
+   <link rel="stylesheet" href="styles/tailwind.css">
+   <title>Chat Ex</title>
 </head>
 <style>
-.box {
-   margin: 1.5rem 2rem;
-   padding: 3rem 6rem;
-   text-align: center;
-   border-radius: .75rem;
-   box-shadow: 0 .1rem .3rem #eee;
-   font-family: "Comic Sans MS", serif;
-   border-left: solid .8rem #14e86c;
+body {
+   height: 100vh;
+   display: grid;
+   grid-template-columns: 30% 70%;
+}
+.menuhov {
+   position: fixed;
+   top: 30%;
+   right: 0;
+   bottom: 30%;
+   width: .5rem;
+   display: flex;
+   align-items: center;
+}
+.menu {
+   width: 3.5rem;
+   margin-left: .5rem;
+   transition: .2s;
+}
+.menuhov:hover .menu {
+   margin-left: -3.5rem;
 }
 </style>
 <body>
-   <p class="box">Working</p>
-   <%- include("partials/minichat"); %>
+   <div class="border-r-4 border-gray-100">
+      <h2 class="m-6 text-3xl">Chat Ex</h2>
+      <p>Chats you are in</p>
+      <% user.chats.forEach(function(chat) { %>
+         
+         <div class="m-4 py-4 px-6 bg-gray-50 rounded-lg">
+            <h2 class="text-xl"><%= chats.find(x => x.id == chat).name %></h2>
+            <p class="text-gray-600"><%= chats.find(x => x.id == chat).about %></p>
+            <p class="text-md"><%= chats.find(x => x.id == chat).members.length %> member(s)</p>
+         </div>
+      <% }); %>
+   </div>
+   <div>
+      <h3 class="m-2 mx-4 text-3xl">Check out some public chats</h3>
+      <% chats.forEach(function(chat) { %>
+         <% if (chat.type = "public edit") { %>
+            <div class="m-4 py-4 px-6 bg-gray-50 rounded-lg">
+               <h2 class="text-2xl"><%= chat.name %></h2>
+               <h3 class="text-lg text-gray-800"><%= chat.about %></h3>
+               <p class="text-gray-600">Members <%= JSON.stringify(chat.members) %></p>
+               <p class="text-gray-600">Id <%= chat.id %></p>
+               <p class="text-gray-600">Created <%= new Date(chat.created).toLocaleString() %></p>
+               <p class="text-gray-600">Messages <%= JSON.stringify(chat.messages) %></p>
+               <p class="text-gray-600">Settings <%= JSON.stringify(chat.settings) %></p>
+            </div>
+         <% } %>
+      <% }); %>
+   </div>
 </body>
+<div class="menuhov">
+   <div class="menu px-2 py-4 bg-white border-2 border-gray-100 rounded-full">
+      <a href="/"><span class="pl-1.5 mb-1.5 text-gray-600 hover:text-gray-800 transition text-2xl fa fa-home"></span></a>
+      <a href="/"><span class="pl-1.5 mb-1.5 text-gray-600 hover:text-gray-800 transition text-2xl fa fa-circle-user"></span></a>
+      <a href="https://github.com/editorrust/chat-playground" target="_blank"><span class="pl-1.5 text-gray-600 hover:text-gray-800 transition text-2xl fa-brands fa-github"></span></a>
+   </div>
+</div>
 </html>
