--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta name="viewport" content="width=device-width">
+   <meta name="theme-color" content="#51FC95">
    <link rel="stylesheet" href="styles/tailwind.css">
    <link rel="stylesheet" href="styles/main.css">
    <script src="socket.io/socket.io.js"></script>
@@ -9,38 +11,26 @@
 <body>
    <%- include("partials/panel") %>
    <div class="h-[100vh] overflow-auto">
-      <% if (chat.settings.type == "public edit" || chat.members.includes(user.username)) { %>
-         <!-- Can edit -->
+      <% if (chat.settings.type == "public edit" || chat.settings.type == "public view" || chat.members.includes(user.username)) { %>
+         <!-- can view - show option to send invite request -->
          <div class="sticky top-0 left-0 right-0 py-2 bg-white border-b-2 border-gray-100">
             <h3 class="m-2 mx-4 text-3xl"><%= chat.name %></h3>
          </div>
          <div class="messageBox py-4 px-2">
             <% chat.messages.forEach(function(msg) { %>
-               <div class="py-2 px-4 my-2 border-b-2 border-gray-100">
+               <div class="py-2 px-4 my-2 border-b-2 last:border-b-0 border-gray-100">
                   <p class="text-lg"><%= msg.msg %></p>
                   <p>Posted by <%= users.find(x => x.id == msg.user).username %></p>
                   <p class="text-gray-700">On <%= new Date(msg.date).toLocaleString() %></p>
                </div>
             <% }); %>
          </div>
-         <form action="javascript:post()">
-            <input id="newMSg" type="text">
-            <button type="submit">Send!</button>
-         </form>
-      <% } else if (chat.settings.type == "public view") { %>
-         <!-- Can view - show option to send invite request -->
-         <div class="sticky top-0 left-0 right-0 py-2 border-b-2 border-gray-100">
-            <h3 class="m-2 mx-4 text-3xl"><%= chat.name %></h3>
-         </div>
-         <div class="messageBox py-4 px-2">
-            <% chat.messages.forEach(function(msg) { %>
-               <div>
-                  <p><%= msg.msg %></p>
-                  <p>Posted by <%= users.find(x => x.id == msg.user).username %></p>
-                  <p>On <%= new Date(msg.date).toLocaleString() %></p>
-               </div>
-            <% }); %>
-         </div>
+         <% if (chat.settings.type == "public edit" || chat.members.includes(user.username)) { %>
+            <form action="javascript:post()" class="p-2 grid bg-white border-t-2 border-gray-100" style="grid-template-columns: auto 7rem">
+               <input class="py-0.5 px-3 text-lg focus:ring-2 ring-theme focus:outline-0 border-2 border-gray-100 rounded-l-full" id="newMSg" type="text">
+               <button class="bg-gray-200 rounded-r-full" type="submit">Send!</button>
+            </form>
+         <% } %>
       <% } else { %>
          <p>You can't access this chat.</p>
       <% } %>
