--- a/views/partials/panel.ejs
+++ b/views/partials/panel.ejs
@@ -2,15 +2,17 @@
    <div class="sticky top-0 left-0 right-0 py-6 px-4 mb-2 border-b-2 border-gray-100">
       <h2 class="text-3xl bg-white">Chat Ex</h2>
    </div>
-
    <p class="m-2 text-lg text-gray-500 font-bold">Chats you are in</p>
    <% user.chats.forEach(function(chat) { %>
       <a href="/<%= chat %>">
-         <div class="py-3 px-4 my-2 border-t-2 first:border-t-0 border-gray-100">
+         <div class="yourchats-listitem py-3 px-4 my-2 mx-2 border-t-2 border-gray-100">
             <h2 class="text-xl"><%= chats.find(x => x.id == chat).name %></h2>
             <p class="text-gray-600"><%= chats.find(x => x.id == chat).about %></p>
             <p class="text-md"><%= chats.find(x => x.id == chat).members.length %> member(s)</p>
          </div>
       </a>
    <% }); %>
+   <hr class="mx-2 h-[2px] bg-gray-100 border-0">
+   <button class="block text-center border-4 border-theme rounded-lg text-theme my-4 mx-auto text-2xl py-2 px-6" onclick="show(`newchatPanel`)">New Chat</button>
+   <%- include("../partials/newchat") %>
 </div>
