--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/brands.min.css">
 <div class="menuhov">
-   <div class="menu px-2 py-4 bg-white border-2 border-gray-100 rounded-full">
-      <a href="/"><span class="pl-1.5 mb-3 text-gray-600 hover:text-gray-800 transition text-2xl fa fa-home"></span></a>
-      <a href="/"><span class="pl-1.5 mb-3 text-gray-600 hover:text-gray-800 transition text-2xl fa fa-circle-user"></span></a>
-      <a href="https://github.com/editorrust/chat-playground" target="_blank"><span class="pl-1.5 text-gray-600 hover:text-gray-800 transition text-2xl fa-brands fa-github"></span></a>
+   <div class="menu px-2 py-4 bg-white border-2 border-gray-100 text-center rounded-full">
+      <a href="/"><span class="mb-3 text-gray-600 hover:text-gray-800 transition text-2xl fa fa-home"></span></a>
+      <a href="/user/<%= user._id %>"><span class="mb-3 text-gray-600 hover:text-gray-800 transition text-2xl fa fa-circle-user"></span></a>
+      <a href="https://github.com/editorrust/chat-playground" target="_blank"><span class="mb-3 text-gray-600 hover:text-gray-800 transition text-2xl fa-brands fa-github"></span></a>
+      <a href="https://github.com/editorrust" target="_blank"><span class="text-gray-600 hover:text-gray-800 transition text-2xl fa fa-user-secret"></span></a>
    </div>
 </div>
